[build-system]
build-backend = 'setuptools.build_meta'
requires = ['setuptools >= 47', 'wheel']

[project]
name = "Mako"
version = "1.3.11"
description = "A super-fast templating language that borrows the best ideas from the existing templating languages."
readme = "README.rst"
license = "MIT"
license-files = [ "LICENSE" ]
authors = [
  { name = "Mike Bayer", email = "mike@zzzcomputing.com" }
]
keywords = ["templating", "templates", "python"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Text Processing :: Markup"
]
requires-python = ">=3.8"
dependencies = [
  "MarkupSafe>=0.9.2"
]

[project.urls]
Homepage = "https://www.makotemplates.org/"
Source = "https://github.com/sqlalchemy/mako"

[project.scripts]
mako-render = "mako.cmd:cmdline"

[project.entry-points."python.templating.engines"]
mako = "mako.ext.turbogears:TGPlugin"

[project.entry-points."pygments.lexers"]
mako = "mako.ext.pygmentplugin:MakoLexer"
html_mako = "mako.ext.pygmentplugin:MakoHtmlLexer"
xml_mako = "mako.ext.pygmentplugin:MakoXmlLexer"
js_mako = "mako.ext.pygmentplugin:MakoJavascriptLexer"
css_mako = "mako.ext.pygmentplugin:MakoCssLexer"

[project.entry-points."babel.extractors"]
mako = "mako.ext.babelplugin:extract"

[project.entry-points."lingua.extractors"]
mako = "mako.ext.linguaplugin:LinguaMakoExtractor"

[tool.setuptools.packages.find]
where = ["."]
exclude = [
    "test*",
    "examples*"
]

[tool.black]
line-length = 79
target-version = ['py38']
