[options]
zip_safe = false

[egg_info]
tag_build = dev

[tool:pytest]
addopts= --tb native -v -r fxX -p warnings
python_files=test/*test_*.py
python_classes=*Test Test*
filterwarnings =
    error::DeprecationWarning:test
    error::DeprecationWarning:mako

[upload]
sign = 1
identity = 4BFDF51E

[flake8]
show-source = true
enable-extensions = G
# E203 is due to https://github.com/PyCQA/pycodestyle/issues/373
ignore =
    A003,A005
    D,
    E203,E305,E711,E712,E721,E722,E741,
    N801,N802,N806,
    RST304,RST303,RST299,RST399,
    W503,W504
exclude = .venv,.git,.tox,dist,docs/*,*egg,build
import-order-style = google
application-import-names = mako,test

[mako_testing]
module_base = ./test/templates/modules
template_base = ./test/templates/
